# actix-try

./: .env  Cargo.toml  Dockerfile  configuration.yaml
configuration/: base.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs
src/service/: email_client.rs
tests/: health_check.rs
