[package]
name = "actix-try"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.11.0"
reqwest = "0.12.23"

tokio = "1.47.1"
serde = { version = "1", features = ["derive"]}
config = "0.15.15"
chrono = "0.4.41"
uuid = { version = "1.18.0", features = ["v4"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
lazy_static = "1.5.0"
tracing-actix-web = "0.7.19"
validator = "0.20.0"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "actix-try"

[dev-dependencies]
claim = "0.5.0"
once_cell = "1.21.3"
